--- a/HISTORY
+++ b/HISTORY
@@ -1,7 +1,13 @@
-v1.0 (2017-03-10)
-=================
+v1.4.0 (2017-03-12)
+===================
 
-* accurate reproduction of the original plug-in
+* clip distortion with automatic make-up gain
+
+* moved parameter pre-processing to modules
+
+* added UI to modules
+
+* cleaned up code
 
 
 
@@ -10,4 +16,11 @@ v1.2.0 (2017-03-11)
 
 * bypass effect blocks
 
-* normalise gain of mathematical overdrive
+* added automatic make-up gain to mathematical overdrive 
+
+
+
+v1.0 (2017-03-10)
+=================
+
+* accurate reproduction of the original plug-in
